--- a/HTML/Delicacies.html
+++ b/HTML/Delicacies.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/CSS/styles.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -28,6 +28,6 @@
         <p>Visit Columbus, OH - A place of wonder</p>
         <p>All rights reserved &copy;. 2024</p>
     </footer>
-    <script src="/Javascript/app.js"></script>
+    <script src="../Javascript/app.js"></script>
 </body>
 </html>
