--- a/HTML/Entertainment.html
+++ b/HTML/Entertainment.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="../CSS/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Entertainment & Attractions</title>
 </head>
 <body>
     <header>
@@ -19,10 +19,24 @@
         </ul>
     </nav>
     <main>
-        <section id="attractions">
+        <div class="attractions" id="attractions"></div>
+        <div class="cards_wrapper">
             <h2>Local Attractions</h2>
-            <!-- Add content about local attractions here -->
-        </section>
+
+            <div class="cards" id="attractions1">
+                <h2>Cosi</h2>
+                <p>Cosi or formally known as the (Center of Science and Industry) is a big attraction in Columbus.
+                People will go there for school trips or to just enjoy time with friends and family.</p>
+                <a href="https://upload.wikimedia.org/wikipedia/commons/a/ab/COSI_01.jpg"><img class="img" src="../images/COSI.jpg" alt="Cosi"></a>
+            </div>
+            <div class="cards" id="attractions2">
+                <h2>Zoombezi Bay</h2>
+                <p>Zoombezi Bay is both an amusement and water park. There are various things to do here. They have
+                15 different water slides and different types of pools. They even have a lazy river!!! The tickets
+                cost around $34.99 for adults and $31.99 for kids.</p>
+                <a href="https://upload.wikimedia.org/wikipedia/commons/f/fd/Zoombezi_Bay.jpg"><img class="img" src="../images/Zoombezi_Bay.jpg" alt="Zoombezi Bay"></a>
+            </div>
+        
     </main>
     <footer>
         <p>Visit Columbus, OH - A place of wonder</p>
