--- a/HTML/Entertainment.html
+++ b/HTML/Entertainment.html
@@ -36,6 +36,18 @@
                 cost around $34.99 for adults and $31.99 for kids.</p>
                 <a href="https://upload.wikimedia.org/wikipedia/commons/f/fd/Zoombezi_Bay.jpg"><img class="img" src="../images/Zoombezi_Bay.jpg" alt="Zoombezi Bay"></a>
             </div>
+            <div class="cards" id="attractions3">
+                <h2>CMOA</h2>
+                <p>The Columbus Museum Of Art encourages that their visitors try new things, so along with having beautiful art 
+                they also host activities. There is a lot to do in the Museum and there will be more to come. We recommend that you try 
+                going there while you're down here. This will be a very enjoyable experience.</p>
+                <a href="https://upload.wikimedia.org/wikipedia/commons/3/3a/Columbus_Museum_of_Art.jpg"><img class="img" src="../images/Columbus_Museum_of_Art.jpg" alt="CMOA"></a>
+            </div>
+            <div class="cards" id="attractions4">
+                <h2></h2>
+                <p></p>
+                <a href=""><img class="img" src="" alt=""></a>
+            </div>
         
     </main>
     <footer>
