More card fixes and page work, changed colors

--- a/HTML/Entertainment.html
+++ b/HTML/Entertainment.html
@@ -20,8 +20,9 @@
     </nav>
     <main>
         <div class="attractions" id="attractions"></div>
+        <h2>Local Attractions</h2>
         <div class="cards_wrapper">
-            <h2>Local Attractions</h2>
+            
 
             <div class="cards" id="attractions1">
                 <h2>Cosi</h2>
@@ -44,11 +45,25 @@
                 <a href="https://upload.wikimedia.org/wikipedia/commons/3/3a/Columbus_Museum_of_Art.jpg"><img class="img" src="../images/Columbus_Museum_of_Art.jpg" alt="CMOA"></a>
             </div>
             <div class="cards" id="attractions4">
+                <h2>OtherWorld</h2>
+                <p>Other World is a big immersive art museum with over 40 different scenes to explore.
+                There are multiple different art scenes, playgrounds, and even secrets yet to be explored by you.
+                When you stop by make sure to check out this wonderfull experience with your family and also friends alike.</p>
+                <a href="https://njproductions.us/blog/travel/ohios-immersive-art-experience-otherworld"><img class="img" src="../images/OtherWorld.jpg" alt="OtherWorld"></a>
+            </div>
+            <div class="cards" id="attractions4">
                 <h2></h2>
                 <p></p>
                 <a href=""><img class="img" src="" alt=""></a>
             </div>
-        
+            <div class="cards" id="attractions4">
+                <h2>National Veterans Memorial and Museum</h2>
+                <p>The National Veterans Memorial and Museum is the only museum in America that honors
+                from all time. Every branch and member. This museum tells the stories from our Veterans to all our visitors.
+                They care dearly for both Veterans and the people who put in the effort to show up and witness this beautiful spectacle.
+                Please make sure to stop by while you're in the area. They are located at 300 W Broad St, Columbus, OH 43215.</p>
+                <a href="https://upload.wikimedia.org/wikipedia/commons/1/14/National_Veterans_Memorial_and_Museum_2018.jpg"><img class="img" src="../images/National_Veterans_Memorial_and_Museum.jpg" alt="">NVMM</a>
+            </div>
     </main>
     <footer>
         <p>Visit Columbus, OH - A place of wonder</p>
