--- a/HTML/Delicacies.html
+++ b/HTML/Delicacies.html
@@ -27,6 +27,11 @@
     <footer>
         <p>Visit Columbus, OH - A place of wonder</p>
         <p>All rights reserved &copy;. 2024</p>
+        <p style="text-align: right;">Special thanks to:<br>
+        W3Schools<br>
+        Cota Bus Services<br>
+        CoGo Bikeshares<br>
+        Central Ohio Bikeways</p>
     </footer>
     <script src="../Javascript/app.js"></script>
 </body>
