--- a/HTML/Entertainment.html
+++ b/HTML/Entertainment.html
@@ -52,9 +52,13 @@
                 <a href="https://njproductions.us/blog/travel/ohios-immersive-art-experience-otherworld"><img class="img" src="../images/OtherWorld.jpg" alt="OtherWorld"></a>
             </div>
             <div class="cards" id="attractions4">
-                <h2></h2>
-                <p></p>
-                <a href=""><img class="img" src="" alt=""></a>
+                <h2>Columbus Blue Jackets</h2>
+                <p>The Columbus Blue Jackets is one of our hockey teams. They rank number 8th in 
+                the metropolitan. The Blue Jackets have a win-loss record of 27 to 43. It's not the best
+                but given time the Blue Jackets could go huge in the state, or even the nation. Columbus has been
+                producing various teams but the BJ's have a really good chance of doing something great. So maybe stop 
+                by and watch a couple games.</p>
+                <a href="https://upload.wikimedia.org/wikipedia/commons/f/f9/Blue_Jackets_warmup_2011-11-29.jpg"><img class="img" src="../images/Blue_Jackets.jpg" alt="The Blue Jackets"></a>
             </div>
             <div class="cards" id="attractions4">
                 <h2>National Veterans Memorial and Museum</h2>
@@ -62,12 +66,17 @@
                 from all time. Every branch and member. This museum tells the stories from our Veterans to all our visitors.
                 They care dearly for both Veterans and the people who put in the effort to show up and witness this beautiful spectacle.
                 Please make sure to stop by while you're in the area. They are located at 300 W Broad St, Columbus, OH 43215.</p>
-                <a href="https://upload.wikimedia.org/wikipedia/commons/1/14/National_Veterans_Memorial_and_Museum_2018.jpg"><img class="img" src="../images/National_Veterans_Memorial_and_Museum.jpg" alt="">NVMM</a>
+                <a href="https://upload.wikimedia.org/wikipedia/commons/1/14/National_Veterans_Memorial_and_Museum_2018.jpg"><img class="img" src="../images/National_Veterans_Memorial_and_Museum.jpg" alt="NVMM"></a>
             </div>
     </main>
     <footer>
         <p>Visit Columbus, OH - A place of wonder</p>
         <p>All rights reserved &copy;. 2024</p>
+        <p style="text-align: right;">Special thanks to:<br>
+        W3Schools<br>
+        Cota Bus Services<br>
+        CoGo Bikeshares<br>
+        Central Ohio Bikeways</p>
     </footer>
     <script src="../Javascript/app.js"></script>
 </body>
