--- a/HTML/index.html
+++ b/HTML/index.html
@@ -24,12 +24,20 @@
             <p>Welcome to Columbus! There are many things to see and do.<br>
             There are many sites in Downtown Columbus, there are excellent resturants, parks, we have our football team and stadium down there as well.<br>
             There is just so much to see and do that it's hard to explain. You'll see the OSU (Ohio State University) down there as well. We have many.<br>
-            colleges and various sports down there to see and explore.</p>
+            colleges and various sports down there to see and explore. Columbus is a high tourist area and for good reasons, There are a lot of amusement<br> 
+            Parks to love and enjoy. We sincerely hope you enjoy your stay.</p>
         </section>
+
+        <a href="https://upload.wikimedia.org/wikipedia/commons/f/fc/Columbus-ohio-skyline-panorama.jpg"><img class="imgs" src="../images/Columbus-ohio.jpg" alt="Columbus Ohio"></a>
     </main>
     <footer>
         <p>Visit Columbus, OH - A place of wonder</p>
         <p>All rights reserved &copy;. 2024</p>
+        <p style="text-align: right;">Special thanks to:<br>
+        W3Schools<br>
+        Cota Bus Services<br>
+        CoGo Bikeshares<br>
+        Central Ohio Bikeways</p>
     </footer>
     <script src="../Javascript/app.js"></script>
 </body>
