--- a/HTML/events.html
+++ b/HTML/events.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snow Fever</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,6 +20,7 @@
             <li><a href="Entertainment.html">Entertainment & Attractions</a></li>
             <li><a href="Transportation.html">Transportation</a></li>
             <li><a href="Delicacies.html">Delicacies</a></li>
+            <li><a href="events.html">Examples</a></li>
         </ul>
     </nav>
 
