--- a/HTML/index.html
+++ b/HTML/index.html
@@ -24,7 +24,7 @@
             <h2>Columbus, OH</h2>
             <p>Welcome to Columbus! There are many things to see and do.<br>
             There are many sites in Downtown Columbus, there are excellent resturants, parks, we have our football team and stadium down there as well.<br>
-            There is just so much to see and do that it's hard to explain. You'll see the OSU (Ohio State University) down there as well. We have many.<br>
+            There is just so much to see and do that it's hard to explain. You'll see the OSU (Ohio State University) down there as well. We have many<br>
             colleges and various sports down there to see and explore. Columbus is a high tourist area and for good reasons, There are a lot of amusement<br> 
             Parks to love and enjoy. We sincerely hope you enjoy your stay.</p>
         </section>
