--- a/HTML/Entertainment.html
+++ b/HTML/Entertainment.html
@@ -62,7 +62,7 @@
                 <a href="https://upload.wikimedia.org/wikipedia/commons/f/f9/Blue_Jackets_warmup_2011-11-29.jpg"><img class="img" src="../images/Blue_Jackets.jpg" alt="The Blue Jackets"></a>
             </div>
             <div class="cards" id="attractions4">
-                <h2>National Veterans Memorial and Museum</h2>
+                <h2>NVMM</h2>
                 <p>The National Veterans Memorial and Museum is the only museum in America that honors
                 from all time. Every branch and member. This museum tells the stories from our Veterans to all our visitors.
                 They care dearly for both Veterans and the people who put in the effort to show up and witness this beautiful spectacle.
