--- a/HTML/Examples.html
+++ b/HTML/Examples.html
@@ -26,7 +26,7 @@
         <div class="card" id="card_Hotel">
             <h1>Hotel Prices</h1>
 
-            <a href="https://www.hilton.com/en/hotels/cmhpcht-home2-suites-polaris-columbus/"><img style="width: 250px;" src="../images/Hotel.jpg" alt="Home2 Suites"></a>
+            <a href="https://www.hilton.com/en/hotels/cmhpcht-home2-suites-polaris-columbus/"><img style="width: 250px; height: 140px;" src="../images/Hotel.jpg" alt="Home2 Suites"></a>
 
             <p class="cost_text">Cost per night - $169</p><button id="hotel_button" class="events_button">Purchase</button>
 
