--- a/HTML/Transportation.html
+++ b/HTML/Transportation.html
@@ -61,7 +61,9 @@
     <footer>
         <p>Visit Columbus, OH - A place of wonder</p>
         <p>All rights reserved &copy;. 2024</p>
+        <a class="cited" href="/images/Report.pdf" download>Works</a>
         <p style="text-align: right;">Special thanks to:<br>
+        
         W3Schools<br>
         Cota Bus Services<br>
         CoGo Bikeshares<br>
