--- a/HTML/index.html
+++ b/HTML/index.html
@@ -29,7 +29,7 @@
             Parks to love and enjoy. We sincerely hope you enjoy your stay.</p>
         </section>
 
-        <a href="https://upload.wikimedia.org/wikipedia/commons/f/fc/Columbus-ohio-skyline-panorama.jpg"><img class="imgs" src="../images/Columbus-ohio.jpg" alt="Columbus Ohio"></a>
+        <a href="https://upload.wikimedia.org/wikipedia/commons/f/fc/Columbus-ohio-skyline-panorama.jpg"><img style="width: 550px;" class="imgs" src="../images/Columbus-ohio.jpg" alt="Columbus Ohio"></a>
     </main>
     <footer>
         <p>Visit Columbus, OH - A place of wonder</p>
