--- a/HTML/Delicacies.html
+++ b/HTML/Delicacies.html
@@ -7,22 +7,22 @@
     <title>Foods in Columbus Ohio</title>
 </head>
 <body>
-    <header>
-        <h1>Columbus, OH, Foods</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="Entertainment.html">Entertainment & Attractions</a></li>
-            <li><a href="Transportation.html">Transportation</a></li>
-            <li><a href="Delicacies.html">Delicacies</a></li>
-            <li><a href="Examples.html">Examples</a></li>
+    <header class="header">
+        <a style="color: white;" href="" class="logo">Best foods in Columbus</a>
+        <input class="menu-btn" type="checkbox" id="menu-btn" />
+        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+        <ul class="menu">
+          <li><a style="color: white;" href="./index.html">Home</a></li>
+          <li><a style="color: white;" href="./Entertainment.html">Entertainment & Attractions</a></li>
+          <li><a style="color: white;" href="./Transportation.html">Transportation</a></li>
+          <li><a style="color: white;" href="./Delicacies.html">Delicacies</a></li>
+          <li><a style="color: white;" href="./Examples.html">Examples</a></li>
         </ul>
-    </nav>
+      </header>
     <main>
         <h2>Local Cuisine</h2>
         <!-- Add content about local food here -->
-        <iframe class="gmaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12230.96280185048!2d-83.0026377635673!3d39.96954973207825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883889c1b990de71%3A0xe43266f8cfb1b533!2sColumbus%2C%20OH!5e0!3m2!1sen!2sus!4v1715084085972!5m2!1sen!2sus" width="600" height="450" 
+        <iframe class="gmaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12230.96280185048!2d-83.0026377635673!3d39.96954973207825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883889c1b990de71%3A0xe43266f8cfb1b533!2sColumbus%2C%20OH!5e0!3m2!1sen!2sus!4v1715084085972!5m2!1sen!2sus" style="width: 500px; height: 500px;" 
         allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
         <h2>Columbus Ohio</h2>
