--- a/HTML/Examples.html
+++ b/HTML/Examples.html
@@ -8,18 +8,18 @@
 
 </head>
 <body>
-    <header>
-        <h1>Columbus Ohio Prices</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="Entertainment.html">Entertainment & Attractions</a></li>
-            <li><a href="Transportation.html">Transportation</a></li>
-            <li><a href="Delicacies.html">Delicacies</a></li>
-            <li><a href="Examples.html">Examples</a></li>
+    <header class="header">
+        <a style="color: white;" href="" class="logo">Costs for columbus Ohio</a>
+        <input class="menu-btn" type="checkbox" id="menu-btn" />
+        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+        <ul class="menu">
+          <li><a style="color: white;" href="./index.html">Home</a></li>
+          <li><a style="color: white;" href="./Entertainment.html">Entertainment & Attractions</a></li>
+          <li><a style="color: white;" href="./Transportation.html">Transportation</a></li>
+          <li><a style="color: white;" href="./Delicacies.html">Delicacies</a></li>
+          <li><a style="color: white;" href="./Examples.html">Examples</a></li>
         </ul>
-    </nav>
+      </header>
 
 
     <div class="example_items">
