--- a/HTML/Entertainment.html
+++ b/HTML/Entertainment.html
@@ -7,18 +7,18 @@
     <title>Entertainment & Attractions</title>
 </head>
 <body>
-    <header>
-        <h1>Columbus, OH, Attractions</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="Entertainment.html">Entertainment & Attractions</a></li>
-            <li><a href="Transportation.html">Transportation</a></li>
-            <li><a href="Delicacies.html">Delicacies</a></li>
-            <li><a href="Examples.html">Examples</a></li>
+    <header class="header">
+        <a style="color: white;" href="" class="logo">Columbus Entertainment</a>
+        <input class="menu-btn" type="checkbox" id="menu-btn" />
+        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+        <ul class="menu">
+          <li><a style="color: white;" href="./index.html">Home</a></li>
+          <li><a style="color: white;" href="./Entertainment.html">Entertainment & Attractions</a></li>
+          <li><a style="color: white;" href="./Transportation.html">Transportation</a></li>
+          <li><a style="color: white;" href="./Delicacies.html">Delicacies</a></li>
+          <li><a style="color: white;" href="./Examples.html">Examples</a></li>
         </ul>
-    </nav>
+      </header>
     <main>
         <div class="attractions" id="attractions"></div>
         <h2>Local Attractions</h2>
