--- a/HTML/Transportation.html
+++ b/HTML/Transportation.html
@@ -7,18 +7,18 @@
     <title>Transportation</title>
 </head>
 <body>
-    <header>
-        <h1>Columbus, OH, Transportaion</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="Entertainment.html">Entertainment & Attractions</a></li>
-            <li><a href="Transportation.html">Transportation</a></li>
-            <li><a href="Delicacies.html">Delicacies</a></li>
-            <li><a href="Examples.html">Examples</a></li>
+    <header class="header">
+        <a style="color: white;" href="" class="logo">Transportation in Columbus</a>
+        <input class="menu-btn" type="checkbox" id="menu-btn" />
+        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+        <ul class="menu">
+          <li><a style="color: white;" href="./index.html">Home</a></li>
+          <li><a style="color: white;" href="./Entertainment.html">Entertainment & Attractions</a></li>
+          <li><a style="color: white;" href="./Transportation.html">Transportation</a></li>
+          <li><a style="color: white;" href="./Delicacies.html">Delicacies</a></li>
+          <li><a style="color: white;" href="./Examples.html">Examples</a></li>
         </ul>
-    </nav>
+      </header>
     <main>
         <section id="transportation">
             <h2>Transportation Methods</h2>
@@ -26,37 +26,26 @@
                 <button class="dropbtn">Transportation</button>
                 <div class="dropdown-content">
                   <a href="https://cogobikeshare.com/" target="_blank">CoGo Bikeshares</a>
-                  <a href="https://www.morpc.org/central-ohio-greenways/" target="_blank">Central Ohio Bikeways</a>
                   <a href="https://cota.com/" target="_blank">Cota Bus Services</a>
+                  <a href="https://www.morpc.org/central-ohio-greenways/" target="_blank">Central Ohio Bikeways</a>
                 </div>
               </div>
         </section>
 
-        <p>This is a list of Columbus's different modes of transportation.<br> 
-        There aren't to many but there are also different types of modes like Ubers.<br>
-        The Urber foundation varies depending on the state. Some states have you pay by the mile<br>
-        others pay by the minute. These are ways to travel around Columbus if you don't have your own car.<br>
-        <br>
-        CoGo Bikeshares: How CoGo Bikeshares works is pretty simple. You download<br>
-        the app that is prompted. When you find one of the bikes just scan the QR code that is<br>
-        attached to the bike by using the app's QR code scanner. You will then be able to cruise around the city.<br>
-        When you finish riding around you can go to a CoGo docking station. Once the lights turn green your good to dock.<br>
-        <br>
-        Central Ohio Bikeways: This way of transportation is also very simple,<br>
-        There are over 230 miles of different trails that connects Ohio. You can go on these<br> 
-        trails by Bike, Scooter, Skateboard, and even running or walking. This is a lot more easy because<br>
-        this mode of transportation involves your own speed and less money. You don't always have to rush as if someone<br>
-        is taking you because you can freely move at your own speed. So why not give it a shot.<br>
-        <br>
-        Cota Bus Services: To ride a Cota bus you want to download the transit app.<br>
-        With this downloaded you can plan your next trip and find the closest bus station in<br>
-        your area. You can also check the prices and different destinations you could travel to. After<br>
-        that you should make sure to get to a bus station at least 5 minutes early. When the bus arrives you<br>
-        should make sure that the bus has the right destination on the top of the windsheild. If that is the case then<br>
-        you will go ahead and board the Cota bus. You will pay uppon boarding. Then enjoy your ride and make sure to<br>
-        get off at the right destination.</p>
+        <p>Here are some of the different ways to travel<br>
+        around Columbus Ohio as well as the websites to get you started on your journey.</p>
+
+        <div class="Trans">
+            <ul>
+                <li>CoGo Bikeshares</li>
+                <li>Cota Bus Services</li>
+                <li>Central Ohio Bikeways</li>
+            </ul>
+        </div>
 
         <a href="https://upload.wikimedia.org/wikipedia/commons/c/c5/Columbus_transportation.jpg"><img class="transport1" src="../images/Columbus_transportation.jpg" alt="Columbus Transportation"></a>
+
+        <p>I hope this helps you as you tour our city.</p>
     </main>
     <footer>
         <p>Visit Columbus, OH - A place of wonder</p>
