--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,18 +7,18 @@
     <title>Columbus Tours</title>
 </head>
 <body>
-    <header>
-        <h1>Welcome to Columbus, OH</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="Entertainment.html">Entertainment & Attractions</a></li>
-            <li><a href="Transportation.html">Transportation</a></li>
-            <li><a href="Delicacies.html">Delicacies</a></li>
-            <li><a href="Examples.html">Examples</a></li>
+    <header class="header">
+        <a style="color: white;" href="" class="logo">Welcome to Columbus Ohio</a>
+        <input class="menu-btn" type="checkbox" id="menu-btn" />
+        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+        <ul class="menu">
+          <li><a style="color: white;" href="./index.html">Home</a></li>
+          <li><a style="color: white;" href="./Entertainment.html">Entertainment & Attractions</a></li>
+          <li><a style="color: white;" href="./Transportation.html">Transportation</a></li>
+          <li><a style="color: white;" href="./Delicacies.html">Delicacies</a></li>
+          <li><a style="color: white;" href="./Examples.html">Examples</a></li>
         </ul>
-    </nav>
+      </header>
     <main>
         <section id="home">
             <h2>Columbus, OH</h2>
@@ -29,7 +29,7 @@
             Parks to love and enjoy. We sincerely hope you enjoy your stay.</p>
         </section>
 
-        <a href="https://upload.wikimedia.org/wikipedia/commons/f/fc/Columbus-ohio-skyline-panorama.jpg"><img style="width: 550px;" class="imgs" src="../images/Columbus-ohio.jpg" alt="Columbus Ohio"></a>
+        <a href="https://upload.wikimedia.org/wikipedia/commons/f/fc/Columbus-ohio-skyline-panorama.jpg"><img style="width: 500px;" class="imgs" src="../images/Columbus-ohio.jpg" alt="Columbus Ohio"></a>
     </main>
     <footer>
         <p>Visit Columbus, OH - A place of wonder</p>
